workshop/begeleider/simulator/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sensor-simulator-demo
  namespace: backend-workshop
spec:
  ingressClassName: nginx
  rules:
    - host: simulator-demo.k8s.eom.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sensor-simulator-demo
                port:
                  number: 80
